<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="updateAlbumItem" type="com.example.recordstoreapp.model.UpdateAlbumItem"/>
        <variable name="clickHandlers" type="com.example.recordstoreapp.ui.updatealbum.UpdateAlbumClickHandlers"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.updatealbum.UpdateAlbumActivity"
            android:layout_margin="20dp">

        <TextView
                android:id="@+id/titleCard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/update_album_header"
                android:textSize="24sp"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:id="@+id/albumName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={updateAlbumItem.albumName}"
                android:autofillHints="none"
                android:inputType="text"
                android:hint="@string/album_name"
                app:layout_constraintTop_toBottomOf="@id/titleCard"/>
        <EditText
                android:id="@+id/artistName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={updateAlbumItem.artistName}"
                android:autofillHints="none"
                android:inputType="text"
                android:hint="@string/artist_name"
                app:layout_constraintTop_toBottomOf="@id/albumName"/>
        <EditText
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={updateAlbumItem.releaseDate}"
                android:autofillHints="none"

                android:hint="@string/release_date"
                app:layout_constraintTop_toBottomOf="@id/artistName"/>

        <EditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={updateAlbumItem.genre}"
                android:inputType="text"
                android:hint="Genre"
                app:layout_constraintTop_toBottomOf="@id/releaseDate"/>
        <EditText
                android:id="@+id/priceInPence"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={updateAlbumItem.priceInPence}"
                android:inputType="text"
                android:hint="@string/price"
                app:layout_constraintTop_toBottomOf="@id/genre"/>
        <Button
                android:id="@+id/updateButton"
                android:text="@string/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/priceInPence"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                android:onClick="@{clickHandlers::submitUpdatedAlbum}"/>
        <Button
                android:id="@+id/deleteButton"
                android:text="@string/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/priceInPence"
                app:layout_constraintStart_toEndOf="@+id/updateButton"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                android:onClick="@{clickHandlers::submitDeleteAlbum}"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@android:drawable/ic_menu_revert"
                app:layout_constraintTop_toBottomOf="@id/updateButton"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{clickHandlers::backButtonClicked}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>